# cuGWAS

./: .gitignore  CMakeLists.txt  README.md
dep/: pgetopt.h
lib/: cugwas.h  gwas_leastsquares.c  gwas_leastsquares.h  gwas_leastsquares_chol_cuda.h
src/: main.cpp
